Got report route, menu bar and controller initially working.

--- a/app/views/menuBar.scala.html
+++ b/app/views/menuBar.scala.html
@@ -9,6 +9,7 @@
                 <li class="@{if(active == 'listUsers) "active" else "inactive"}"><a href="@routes.Application.listUsers()">List Users</a></li>
                 <li class="@{if(active == 'testRegistration) "active" else "inactive"}"><a href="@routes.Application.createRegistration()">Test Registration</a></li>
                 <li class="@{if(active == 'testLogin) "active" else "inactive"}"><a href="@routes.Application.testLogin()">Test Login</a></li>
+                <li class="@{if(active == 'listUsers) "active" else "inactive"}"><a href="@routes.Report.listUsers()">Workout/Location Report</a></li>
             </ul>
         </div>
     </div>
