--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -32,6 +32,9 @@
     </head>
     <body>
         @menuBar(activePage)
-        @content
+        <body>
+        <div class="container">
+            @content
+        </div>
     </body>
 </html>
