--- a/app/views/menuBar.scala.html
+++ b/app/views/menuBar.scala.html
@@ -9,7 +9,7 @@
                 <li class="@{if(active == 'listUsers) "active" else "inactive"}"><a href="@routes.Application.listUsers()">List Users</a></li>
                 <li class="@{if(active == 'testRegistration) "active" else "inactive"}"><a href="@routes.Application.createRegistration()">Test Registration</a></li>
                 <li class="@{if(active == 'testLogin) "active" else "inactive"}"><a href="@routes.Application.testLogin()">Test Login</a></li>
-                <li class="@{if(active == 'listUsers) "active" else "inactive"}"><a href="@routes.Report.showWorkoutLocations()">Workout/Location Report</a></li>
+                <li class="@{if(active == 'showWorkoutLocations) "active" else "inactive"}"><a href="@routes.Report.showWorkoutLocations()">Workout/Location Report</a></li>
             </ul>
         </div>
     </div>
