Got BigInt, BigDecimal working - use Long and java.math.BigDecimal

--- a/app/views/listWorkoutLocations.scala.html
+++ b/app/views/listWorkoutLocations.scala.html
@@ -97,13 +97,13 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
 
             <td><a href="">@woL.clubName</a></td>
 
-            <td>0</td>
+            <td>@woL.machineCnt</td>
 
             <td><a href="">Equipment List</a></td>
 
             <td>0</td>
             <td>0</td>
-            <td>0</td>
+            <td>@woL.workoutCnt</td>
             <td>0</td>
             <td>0</td>
             <td>0</td>
