--- a/app/views/listWorkoutLocations.scala.html
+++ b/app/views/listWorkoutLocations.scala.html
@@ -1,4 +1,4 @@
-@(currentPage: Page[WorkoutLocation], currentOrderBy: Int, currentFilter: String, startDate: Int)(implicit flash: play.api.mvc.Flash)
+@(currentPage: Page[WorkoutLocation], currentOrderBy: Int, currentFilter: String, startDate: String)(implicit flash: play.api.mvc.Flash)
 
 
 
@@ -34,9 +34,9 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
 <div id="actions" class="well">
 
     @helper.form(action=routes.Report.showWorkoutLocations()) {
-    <input type="search" name="f" value="@currentFilter" placeholder="Company ID" />
+    Club: <input type="search" name="f" value="@currentFilter" placeholder="Company ID" />
     <br>
-    <input type="search" name="sd" value="@startDate" placeholder="Start Date: yyyymmdd " />
+    Start: <input type="search" name="sd" value="@startDate" size= "10" placeholder="Start Date: yyyymmdd " />
     @* <input type="search" name="ed" value="@endDate" placeholder="Start Date: yyyymmdd " /> *@
     <input type="submit" value="Go" class="btn primary">
     }
@@ -117,7 +117,7 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
             <td>@woL.woPerScreen.formatted("%.2f")</td>
             <td>@woL.woScreenDay.formatted("%.2f")</td>
             <td>@woL.durAvg.formatted("%.2f")</td>
-            <td>@woL.durTot.formatted("%.2f")</td>
+            <td>@woL.durTot.formatted("%.0f")</td>
         </tr>
         }
         }
