--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,6 +11,10 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
 
+        <!-- DatePicker assets & code   -->
+        <link rel="stylesheet" href="http://dl.dropbox.com/u/143355/datepicker/bootstrap.css">
+        <script src="@routes.Assets.at("javascripts/bootstrap-datepicker.js")" type="text/javascript"></script>
+
         <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
         <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
