Date picker convert to int and formatting.

--- a/app/views/listWorkoutLocations.scala.html
+++ b/app/views/listWorkoutLocations.scala.html
@@ -43,6 +43,7 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
         <div class="input">
             <div class="inline-inputs">
             <select name="f" value="@currentFilter" >
+                <option value="">Select a company</option>
                 @Company.options.map { opt =>
                     <option value="@opt._1" @if(opt._1.toString == currentFilter){selected="yes"}>@opt._2</option>
                 }
