--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,7 +12,7 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
 
         <!-- DatePicker assets & code   -->
-        <link rel="stylesheet" href="http://dl.dropbox.com/u/143355/datepicker/bootstrap.css">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/datepicker-bootstrap.css")">
         <script src="@routes.Assets.at("javascripts/bootstrap-datepicker.js")" type="text/javascript"></script>
 
         <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
