Secure login with passing in the desired destination URL to redirect to after login working.

--- a/app/views/menuBar.scala.html
+++ b/app/views/menuBar.scala.html
@@ -12,6 +12,7 @@
                 <li class="@{if(active == 'testLogin) "active" else "inactive"}"><a href="@routes.Application.testLogin()">Test Login</a></li>
              *@
                 <li class="@{if(active == 'showWorkoutLocations) "active" else "inactive"}"><a href="@routes.Report.showWorkoutLocations()">Reports</a></li>
+                <li class="@{if(active == 'logout) "active" else "inactive"}"><a href="@routes.Auth.logout()">Logout</a></li>
             </ul>
         </div>
     </div>
