--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -13,7 +13,9 @@
     <a href="@routes.Application.index" id="logo"><span>Zen</span>tasks</a>
 </header>
 
-@helper.form(routes.Auth.authenticate) {
+
+
+@helper.form(routes.Auth.authenticate () ) {
 
 <h1>Sign in</h1>
 
@@ -42,7 +44,7 @@
 }
 
 <p class="note">
-    Try <em>guillaume@@sample.com</em> with <em>secret</em> as password.
+    Target URL: @* @targetPath *@
 </p>
 
 </body>
