--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,51 +1,42 @@
 @(form: Form[(String,String)])(implicit flash: Flash)
 
-
-<html>
-<head>
-    <title>Zentasks</title>
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-    <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/login.css")">
-</head>
-<body>
-
-<header>
-    <a href="@routes.Application.index" id="logo"><span>Zen</span>tasks</a>
-</header>
-
-
+@main("Login", 'login) {
 
 @helper.form(routes.Auth.authenticate () ) {
 
-<h1>Sign in</h1>
+    <h1>Sign in</h1>
 
-@form.globalError.map { error =>
-<p class="error">
-    @error.message
-</p>
-}
+    @form.globalError.map { error =>
+        <p class="error">
+            @error.message
+        </p>
+    }
 
-@flash.get("success").map { message =>
-<p class="success">
-    @message
-</p>
-}
+    @flash.get("success").map { message =>
+        <p class="success">
+            @message
+        </p>
+    }
 
-<p>
-    <input type="email" name="email" placeholder="Email" id="email" value="@form("email").value">
-</p>
-<p>
-    <input type="password" name="password" id="password" placeholder="Password">
-</p>
-<p>
-    <button type="submit" id="loginbutton">Login</button>
-</p>
+    <div id="actions" class="twipsies well">
+        <p>
+            <input type="email" name="email" placeholder="Email" id="email" value="@form("email").value">
+        </p>
+        <p>
+            <input type="password" name="password" id="password" placeholder="Password">
+        </p>
+        <p>
+            <input type="submit" value="Login" class="btn primary">
+        </p>
+    </div>
 
 }
 
 <p class="note">
-    Target URL: @* @targetPath *@
+    Note.
 </p>
 
-</body>
-</html>
+}
+
+
+
