add the error message and start to work on authenticating the user.

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -7,7 +7,7 @@
     <h1>Sign in</h1>
 
     @form.globalError.map { error =>
-        <p class="error">
+        <p class="alert-message warning">
             @error.message
         </p>
     }
